# backend/docs/openapi/openapi.json
@@ -506,6 +506,95 @@
         ]
       }
     },
+    "/api/v1/alarm/info/history/:id/comment": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "OK(响应包络见平台 response 中间件)"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          },
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "summary": "ListAlarmComments-fm (aetherlink-iot/backend/internal/api.(*AlarmApi))",
+        "tags": [
+          "alarm"
+        ]
+      },
+      "parameters": [
+        {
+          "in": "path",
+          "name": "id",
+          "required": true,
+          "schema": {
+            "type": "string"
+          }
+        }
+      ],
+      "post": {
+        "responses": {
+          "200": {
+            "description": "OK(响应包络见平台 response 中间件)"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          },
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "summary": "CreateAlarmComment-fm (aetherlink-iot/backend/internal/api.(*AlarmApi))",
+        "tags": [
+          "alarm"
+        ]
+      }
+    },
+    "/api/v1/alarm/info/history/:id/comment/:comment_id": {
+      "delete": {
+        "responses": {
+          "200": {
+            "description": "OK(响应包络见平台 response 中间件)"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          },
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "summary": "DeleteAlarmComment-fm (aetherlink-iot/backend/internal/api.(*AlarmApi))",
+        "tags": [
+          "alarm"
+        ]
+      },
+      "parameters": [
+        {
+          "in": "path",
+          "name": "id",
+          "required": true,
+          "schema": {
+            "type": "string"
+          }
+        },
+        {
+          "in": "path",
+          "name": "comment_id",
+          "required": true,
+          "schema": {
+            "type": "string"
+          }
+        }
+      ]
+    },
     "/api/v1/alarm/info/history/:id/reset": {
       "parameters": [
         {
